# unionbio

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.parabricks  Dockerfile.refbase  README.md  build.py  build_test_image.py  config.yaml  dev_thoughts.txt  docker_build.sh  env.yml  execute.py  fastp.html  folding_ws.yaml  folding_ws_reimpl.yaml  image_build.py  images.py  increase_resources.yaml  main_ws.yaml  nemo_pod_debug.yaml  nemo_ws.yaml  pixi.toml  pyproject.toml  requirements.in  requirements.txt
src/: alignment_dashboard.py  config.py  dgx_parabricks.py  execute.py
src/datatypes/: alignment.py  known_sites.py  reads.py  reference.py  variants.py
src/tasks/: base_recal.py  bowtie2.py  bwa.py  dgx_parabricks.py  fastp.py  fastqc.py  folding.py  hisat2.py  mark_dups.py  multiqc.py  parabricks.py  sample_types.py  sort_sam.py  utils.py
src/tests/: test_aligners.py  test_folding.py  test_parabricks.py  test_prep_samples.py  test_sample_types.py  test_tasks.py  test_utils.py  utils.py
src/unionbio/: config.py  execute.py  images.py
src/workflows/: alignment.py  compare_aligners.py  parabricks_wgs_calling.py  simple_alignment.py
tests/: build.py  config.py  images.py  runner.py  test_aligners.py  test_folding.py  test_parabricks.py  test_sample_types.py  test_tasks.py  test_utils.py  utils.py
tests/colabfold/: test_af.py  test_colabfold.py
tests/folding/: test_folding.py
tests/main/: test_aligners.py  test_callers.py  test_data_types.py  test_tasks.py  test_types.py  test_utils.py
unionbio/: alignment_dashboard.py  build.py  config.py
workflows/: 1_mapping.py  __init__.py  alignment.py  bowtie2.py  config.py  config.yaml  eager_ex.py  fastp.py  fastqc.py  hisat2.py  map_ex.py  mark_dups.py  multiqc.py  repro.py  sample_types.py  shellout.py  utils.py
workspaces/: README.md
(+196 files in other folders)
