[tool.poetry]
name = "unionbio"
version = "0.1.0"
description = ""
authors = ["pryce-turner <pryce.turner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flytekit = "^1.12.0"
unionai = "0.1.41"
imagespec-fast-builder = "0.0.30"
docker = "<7.0.0"
requests = "2.31.0"
flytekitplugins-envd = "^1.12.3"

[tool.poetry.scripts]
image-builder = "images:build"
test-image-builder = "images:build_test"
main-tests = "tests.runner:test_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
