[tool.poetry]
name = "unionbio"
version = "0.1.1"
description = ""
authors = ["pryce-turner <pryce.turner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flytekit = "^1.12.0"
docker = "<7.0.0"
requests = "2.31.0"
streamlit = "^1.36.0"
union = "^0.1.117"
kubernetes = "^31.0.0"
flytekitplugins-pod = "^1.13.5"

[tool.poetry.scripts]
image-builder = "src.unionbio.images:build"
test-image-builder = "tests.runner:build_test"
main-tests = "tests.runner:test_main"
cf-tests = "tests.runner:test_colabfold"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
